--- a/Pay365/Pay365Wallet/App_GlobalResources/Common.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Common.en.resx
@@ -373,7 +373,7 @@
     <value>Pay365 wallet</value>
   </data>
   <data name="lbl_AddressName" xml:space="preserve">
-    <value>No. 1 Dao Duy Anh, Dong Da, Hanoi</value>
+    <value>No 243A De La Thanh. Ha Noi</value>
   </data>
   <data name="lbl_company" xml:space="preserve">
     <value>Pay365 e-wallet</value>
