--- a/Pay365/Pay365Wallet/App_GlobalResources/Common.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Common.resx
@@ -373,7 +373,7 @@
     <value>Ví điện tử Pay365</value>
   </data>
   <data name="lbl_AddressName" xml:space="preserve">
-    <value>Số 1. Đào Duy Anh. Đống Đa. Hà Nội</value>
+    <value>Số 243A Đê La Thành. Hà Nội</value>
   </data>
   <data name="lbl_company" xml:space="preserve">
     <value>Ví điện tử Pay365</value>
