--- a/Pay365/Pay365Wallet/locales/en/common.errorcode.json
+++ b/Pay365/Pay365Wallet/locales/en/common.errorcode.json
@@ -1,145 +1,141 @@
 ﻿{
-  "Error": {
-    "DONE": "Success",
-    "NOT_LOGIN": "Account not login",
-    "EXPIRED_SESSION": "Data is invalid. Please try again later",
-    "CAPTCHA_INVALID": "Captcha code is invalid",
-    "USERNAME_REQUIRED": "Please enter your account number",
-    "USERNAME_LENGTH": "Account number is invalid",
-    "PASSWORD_REQUIRED": "Please enter your password",
-    "PASSWORD_LENGTH": "Password is not formatted correctly",
-    "INVALID_DATA": "Invalid data. Please try again later",
-    "CAPTCHA_REQUIRED": "Please enter captcha code",
-    "BLOCK_ACCOUNT": "Account is locked",
-    "FAILED_LOGIN": "Login failed",
-    "LOGININFO_EXPRIZE": "Thông tin đăng nhập hết hiệu lực (Dành cho đăng nhập sử dụng OTP nhưng để quá lâu không nhập OTP)",
-    "BLOCK_IP": "IP Address is locking. Please try again later",
-    "BLOCKED_IP": "IP Address is locking",
-    "INVALID_OTP": "Activation code is invalid. Please try again later",
-    "ACCESS_DENIED": "You don't have permission to access. Please try again later",
-    "TOKEN_EXPRIZE": "Token expire",
-    "TOKEN_INVALID": "Token is invalid",
-    "OTP_REQUIRED": "Please enter Activation code",
-    "SYSTEM_TIMEOUT": "Hệ thống đã hết phiên làm việc. Vui lòng quay lại sau",
-    "USERNAMEORPASSWORD_INVALID": "Account name or password is invalid. Please try again later",
-    "REPASSWORD_INVALID": "Re-password is invalid. Please enter agian",
-    "TERMSOFUSE_AGGREE_INVALID": "Đồng ý điều khoản sử dụng",
-    "PASSWORD_NOT_CONTAINT_USERNAME": "Mật khẩu không được chứa tài khoản",
-    "PASSWORD_NOT_IN_USERNAME": "Mật khẩu không được năm trong tài khoản",
-    "USERNAME_INVALID_KEY": "Mật khẩu không được nằm trong tài khoản",
-    "PRIZEVALUE_ZERO": "Giá trị thanh toán tối thiểu {0} nghìn đồng",
-    "PRIZEVALUE_INVALID": "Mệnh giá nạp không đúng",
-    "NOTTRANSFERTO_SELF": "You can not transfer money to yourself",
-    "SECURITYTYPE_INVALID": "Secure type is invalid",
-    "MIN_AMOUNT_INVALID": "Limit is invalid",
-    "IMAGE_INVALID": "Image is invalid",
-    "MIN_IMAGE": "At least one image",
-    "NOT_FOUND_EMAIL_CONTENT": "Không tìm thấy nội dung email trong hệ thống",
-    "ACCOUNT_NOT_REGISTER_SECURITY": "Account is not register security",
-    "SYSTEM_EXCEPTION": "System fail. Please come back later",
-    "IP_REGISTER_MAX": "Địa chỉ IP đã đăng ký nhiều tài khoản.",
-    "REGISTER_SUCCESS_NONE_LOGIN": "Đăng ký thành công nhưng chưa đăng nhập được",
-    "REGISTER_FAILED": "Register account is not success",
-    "PASSPORT_INVALID": "Passport is invalid",
-    "PASSPORT_CREATED": "Passport is already exists",
-    "MOBILE_CREATED": "Mobile is already exists",
-    "EMAIL_CREATED": "Email is already exists",
-    "OLDEMAIL_DUBLICATE_NEWEMAIL": "Email cũ giống email mới",
-    "OLDMOBILE_DUBLICATE_NEWMOBILE": "Số điện thoại cũ giống số điện thoái mới",
-    "EMAIL_INVALID": "Email is invalid",
-    "MOBILE_INVALID": "Mobile is invalid",
-    "PASSWORD_NOT_STRONG": "Passwords are not secure enough",
-    "ACCOUNT_NOTREG_SECURITY_EMAIL": "Tài khoản chưa đăng ký bảo mật email",
-    "ACCOUNT_NOTREG_SECURITY_MOBILE": "Tài khoản chưa đăng ký bảo mật mobile",
-    "NOT_ENOUGH_MONEY_PAYMENT": "Tài khoản không đủ tiền để thanh toán",
-    "SECURITY_NOT_REGISTER": "Tài khoản chưa đăng ký thông tin bảo mật",
-    "CARDTYPE_REQUIRET": "Yêu cầu chọn loại thẻ",
-    "CARDCODE_NOTEXISTED_OR_USED": "Mã số nạp tiền không tồn tại hoặc đã được sử dụng",
-    "TRANSACTION_FAILED": "Transaction fail. Please try again later",
-    "CARD_USED": "Thẻ đã bị sử dụng",
-    "CARD_BLOCKED": "Thẻ đã bị khóa",
-    "CARD_EXPRIZED": "Thẻ đã hết hạn sử dụng",
-    "CARD_NOT_ACTIVE": "Thẻ chưa được kích hoạt",
-    "CARDSERI_OR_CARDCODE_INVALID": "Card serial hoặc cardcode không đúng",
-    "PRIZEVALUE_BETWEEN_MIN_MAX": "Số tiền thấp nhất là 10 nghin và không vượt quá 20 triệu",
-    "CARD_INVALID": "Card information is invalid",
-    "CARD_NOT_REGISTER_INTERNETBAMKING": "Thẻ chưa đăng ký dịch vụ giao dịch qua internet",
-    "MAX_OTP_FAILED": "Quá số lần cho phép. (Sai OTP, quá hạn mức trong ngày)",
-    "CANNOT_CONNECTTO_SERVER": "Connection fail. Please try again later",
-    "CONNECT_SERVER_ERROR": "Connection fail. Please try agian later",
-    "CARD_AMOUNT_REQUIRED": "Bạn cần nhập vào số lượng thẻ",
-    "ACCOUNT_NOT_REGISTER_SMSBANKING": "Bạn chưa đăng ký SMSPlus",
-    "TIME_SMSBANKING_ACTIVE": "Sau 24 tiếng tính từ thời điểm đăng ký SMS plus mới có thể thực hiện giao dịch",
-    "ORDER_INFO_EXPRIZE": "Thông tin đơn hàng quá hạn, mời bạn thử lại",
-    "ACCOUNT_NOT_REGISTER_APP_OTP": "Account is not register security",
-    "AMOUNT_MONEY_LOCK_REQUIRED": "Please enter freeze balance",
-    "AMOUNT_MONEY_UNLOCK_REQUIRED": "Please enter freeze balance",
-    "CARD_PRIZE_INVALID": "Mệnh giá thẻ không đúng",
-    "RENICKNAME_INVALID": "Nhập lại Nickname không chính xác",
-    "TRANSFER_REASON_REQUIRED": "Please enter reason for transfer. At least 5 character",
-    "TRANSFER_PRIZE_MIN": "Giá trị chuyển khoản tối thiểu là ",
-    "AUTHEN_SOCIAL_FAILED": "Đăng nhập không thành công. Vui lòng thử lại",
-    "SEND_OTP_MAX": "Số lần gửi OTP vượt quá số lượng cho phép (tối đa 3 lần/ngày).<br/> Xin vui lòng gửi tin nhắn RIK OTP đến 8100 để nhận lại mã kích hoạt Số lần gửi OTP vượt quá số lượng cho phép (tối đa 3 lần/ngày)",
-    "OTPINVALID_OR_USED": "Activation code is invalid or already used",
-    "BIRTH_DATE_INVALID ": "Birth day is invalid",
-    "FULLNAME_INVALID": "Full name is invalid",
-    "ACCOUNT_NOTACTIVE": "Account not activated, please active",
-    "ACCOUNT_ACTIVED": "Account is already active. ",
-    "SECURITY_OTP_REQUIRED": "Yêu cầu bảo mật bằng OTP",
-    "EMAIL_OVER_SEND": "Thời gian giữa 2 lần gửi email là 30s, vui lòng thử lại sau",
-    "EMAIL_NOT_VERIFY": "Email is not verify",
-    "USERNAME_INVALID": "Account is invalid",
-    "ACCOUNT_ISNOTACCTIVE": "Account is not active",
-    "ACCOUNT_NOTFOUND": "Account is not exists",
-    "INVALID_PASSWORD": "Password is invalid",
-    "SYSTEM_ERROR": "System fail. Please try again later",
-    "ACCOUNT_EXISTED": "Account is existed",
-    "ACCOUNT_BLOCKED": "Account is locking. Please call 093-4626-505 for assistance",
-    "ACCOUNT_UNACTIVE": "Account is not active",
-    "ACCOUNT_NOTEXISTED": "Account is not exists",
-    "NOT_PERMISSION": "You don't have permission to access. Please come back later",
-    "INPUT_DATA_INVALID": "Data is invalid",
-    "OLDPASSWORD_NOTFOUND": "Password is not right. Please try again",
-    "MOBILE_EXISTED": "Phone number already exists",
-    "MOBILE_NOTFOUND": "Mobile is invalid",
-    "EMAIL_EXISTED": "Email already exists",
-    "EMAIL_NOTFOUND": "Email is invalid",
-    "STATUS_INVALID": "Status is invalid",
-    "DUPLICATE_DATA": "Data is invalid. Please come back later",
-    "EMAIL_ACTIVED": "Email is activated",
-    "MOBILE_ACTIVED": "Mobile is activated",
-    "ACCOUNT_NOT_LOCK": "Account not lock",
-    "UNLOCK_DENIED": "Not permission unlock",
-    "OLDMOBILE_INVALID": "Old mobile is invalid",
-    "NOT_ENOUGH_MONEY_CORE": "Account balance is not enough",
-    "OTP_EXPIRE": "Activation code is expires validity period",
-    "OTP_INVALID": "Activation code is invalid",
-    "CARDS_NOT_ENOUGH": "Number of cards is not enough",
-    "HISTORY_DATA_NOTEXIST": "Can't find transaction history",
-    "MIN_AMOUNT_OVER_VALUE": "Transaction exceeds limit",
-    "NOT_ENOUGH_MONEY": "Account not enough money",
-    "PAYMENT_FAIL": "Payment not success. Please try again laters",
-    "BANKACCOUNT_NOTEXIST": "Bank account not exist",
-    "PAYMENT_RECEIACCOUNT_NOT_EXITED": "Receiver account not exited",
-    "PAYMENT_RECEIACCOUNT_NOT_SUPPORT": "Can't topup to this account",
-    "NOTTRANSFER_YOURSEFT": "You can not transfer money to yourself",
-    "C_EMAIL_NOT_VERIFY": "Email is not verify. Please verify email",
-    "MAX_AMOUNT_OUTOF_RANGER": "The topup amount exceeds the limit {0}",
-    "ACCOUNT_UNVERIFY": "An uncertificate account can not use this function",
-    "ACCOUNT_UNLINKED": "Account is not link card",
-    "BANKACCOUNT_NOTEXISTED": "Card number / bank account number does not exist",
-    "ACCOUNT_VERIFIED": "Account is verified",
-    "TRANSACTION_PROCESSING": "Transaction is processing. ",
-    "ERRORCODE_SACOMBANK": "Activation code is invalid. Please try again later",
-    "LINKCARD_NOTSUCCESS": "Link card not success",
-    "NICKNAME_NOTEXISTS": "Account is not exists",
-    "AMOUNT_NOTVALID": "Amount is invalid",
-    "BANK_NOTSUPPORT": "This bank is not support",
-    "NOT_ENOUGHT_BALANCE": "You not enough balance",
-    "LINKCARD_EXISTS": "This card is already link to another account",
-    "CARDNUMBER_NOTACTIVE_ONLINE": "Card has not registered online transaction service",
-    "FAIL_OTP_TIMEOUT": "OTP time out",
-    "FAIL_OTP_ERROR": "OTP is invalid",
-    "DEFAULT": "System fail. Please come back later !"
-  }
+    "Error": {
+        "ACCESS_DENIED": "You don't have permission to access. Please try again later",
+        "ACCOUNT_ACTIVED": "Account is already active. ",
+        "ACCOUNT_BLOCKED": "Account is locking. Please call 093-4676-505 for assistance",
+        "ACCOUNT_EXISTED": "Account is existed",
+        "ACCOUNT_ISNOTACCTIVE": "Account is not active",
+        "ACCOUNT_NOT_LOCK": "Account not lock",
+        "ACCOUNT_NOT_REGISTER_APP_OTP": "Account is not register security",
+        "ACCOUNT_NOT_REGISTER_SECURITY": "Account is not register security",
+        "ACCOUNT_NOT_REGISTER_SMSBANKING": "You not register SMS Banking",
+        "ACCOUNT_NOTACTIVE": "Account not activated, please active",
+        "ACCOUNT_NOTEXISTED": "Account is not exists",
+        "ACCOUNT_NOTFOUND": "Account is not exists",
+        "ACCOUNT_NOTREG_SECURITY_EMAIL": "Account not yet register email secure",
+        "ACCOUNT_NOTREG_SECURITY_MOBILE": "Account not yet register mobile secure",
+        "ACCOUNT_UNACTIVE": "Account is not active",
+        "ACCOUNT_UNLINKED": "Account is not link card",
+        "ACCOUNT_UNVERIFY": "An uncertificate account can not use this function",
+        "ACCOUNT_VERIFIED": "Account is verified",
+        "AMOUNT_MONEY_LOCK_REQUIRED": "Please enter freeze balance",
+        "AMOUNT_MONEY_UNLOCK_REQUIRED": "Please enter freeze balance",
+        "AMOUNT_NOTVALID": "Amount is invalid",
+        "AUTHEN_SOCIAL_FAILED": "Login fail. Please try again later",
+        "BANK_NOTSUPPORT": "This bank is not support",
+        "BANKACCOUNT_NOTEXIST": "Bank account not exist",
+        "BANKACCOUNT_NOTEXISTED": "Card number / bank account number does not exist",
+        "BIRTH_DATE_INVALID ": "Birth day is invalid",
+        "BLOCK_ACCOUNT": "Account is locked",
+        "BLOCK_IP": "IP Address is locking. Please try again later",
+        "BLOCKED_IP": "IP Address is locking",
+        "C_EMAIL_NOT_VERIFY": "Email is not verify. Please verify email",
+        "CANNOT_CONNECTTO_SERVER": "Connection fail. Please try again later",
+        "CAPTCHA_INVALID": "Captcha code is invalid",
+        "CAPTCHA_REQUIRED": "Please enter captcha code",
+        "CARD_AMOUNT_REQUIRED": "You need enter card quantity",
+        "CARD_BLOCKED": "Card is locked",
+        "CARD_EXPRIZED": "Card is expired",
+        "CARD_INVALID": "Card information is invalid",
+        "CARD_NOT_ACTIVE": "Card not active",
+        "CARD_NOT_REGISTER_INTERNETBAMKING": "Card not register internet banking",
+        "CARD_PRIZE_INVALID": "Card prize is invalid",
+        "CARD_USED": "Card has been used",
+        "CARDCODE_NOTEXISTED_OR_USED": "The recharge code does not exist or has been used",
+        "CARDNUMBER_NOTACTIVE_ONLINE": "Card has not registered online transaction service",
+        "CARDS_NOT_ENOUGH": "Number of cards is not enough",
+        "CARDSERI_OR_CARDCODE_INVALID": "Card serial or cardcode is invalid",
+        "CARDTYPE_REQUIRET": "Please choose card type",
+        "CONNECT_SERVER_ERROR": "Connection fail. Please try agian later",
+        "DEFAULT": "System fail. Please come back later !",
+        "DONE": "Success",
+        "DUPLICATE_DATA": "Data is invalid. Please come back later",
+        "EMAIL_ACTIVED": "Email is activated",
+        "EMAIL_CREATED": "Email is already exists",
+        "EMAIL_EXISTED": "Email already exists",
+        "EMAIL_INVALID": "Email is invalid",
+        "EMAIL_NOT_VERIFY": "Email is not verify",
+        "EMAIL_NOTFOUND": "Email is invalid",
+        "EMAIL_OVER_SEND": "Time between 2 sent email is 30s, please try agian later",
+        "ERRORCODE_SACOMBANK": "Activation code is invalid. Please try again later",
+        "EXPIRED_SESSION": "Data is invalid. Please try again later",
+        "FAIL_OTP_ERROR": "OTP is invalid",
+        "FAIL_OTP_TIMEOUT": "OTP time out",
+        "FAILED_LOGIN": "Login failed",
+        "FULLNAME_INVALID": "Full name is invalid",
+        "HISTORY_DATA_NOTEXIST": "Can't find transaction history",
+        "IMAGE_INVALID": "Image is invalid",
+        "INPUT_DATA_INVALID": "Data is invalid",
+        "INVALID_DATA": "Invalid data. Please try again later",
+        "INVALID_OTP": "Activation code is invalid. Please try again later",
+        "INVALID_PASSWORD": "Password is invalid",
+        "IP_REGISTER_MAX": "IP address registered multiple accounts.",
+        "LINKCARD_EXISTS": "This card is already link to another account",
+        "LINKCARD_NOTSUCCESS": "Link card not success",
+        "LOGININFO_EXPRIZE": "Login expire. Please logout and try agian",
+        "MAX_AMOUNT_OUTOF_RANGER": "The topup amount exceeds the limit {0}",
+        "MAX_OTP_FAILED": "OTP Quá số lần cho phép.",
+        "MIN_AMOUNT_INVALID": "Limit is invalid",
+        "MIN_AMOUNT_OVER_VALUE": "Transaction exceeds limit",
+        "MIN_IMAGE": "At least one image",
+        "MOBILE_ACTIVED": "Mobile is activated",
+        "MOBILE_CREATED": "Mobile is already exists",
+        "MOBILE_EXISTED": "Phone number already exists",
+        "MOBILE_INVALID": "Mobile is invalid",
+        "MOBILE_NOTFOUND": "Mobile is invalid",
+        "NICKNAME_NOTEXISTS": "Account is not exists",
+        "NOT_ENOUGH_MONEY": "Account not enough money",
+        "NOT_ENOUGH_MONEY_CORE": "Account balance is not enough",
+        "NOT_ENOUGH_MONEY_PAYMENT": "Account not enough balance to payment",
+        "NOT_ENOUGHT_BALANCE": "You not enough balance",
+        "NOT_FOUND_EMAIL_CONTENT": "Not found email in system",
+        "NOT_LOGIN": "Account not login",
+        "NOT_PERMISSION": "You don't have permission to access. Please come back later",
+        "NOTTRANSFER_YOURSEFT": "You can not transfer money to yourself",
+        "NOTTRANSFERTO_SELF": "You can not transfer money to yourself",
+        "OLDEMAIL_DUBLICATE_NEWEMAIL": "Old emails are like new emails",
+        "OLDMOBILE_DUBLICATE_NEWMOBILE": "Old phone numbers are the same as new phone numbers",
+        "OLDMOBILE_INVALID": "Old mobile is invalid",
+        "OLDPASSWORD_NOTFOUND": "Password is not right. Please try again",
+        "ORDER_INFO_EXPRIZE": "Expire order information, please try again",
+        "OTP_EXPIRE": "Activation code is expires validity period",
+        "OTP_INVALID": "Activation code is invalid",
+        "OTP_REQUIRED": "Please enter Activation code",
+        "OTPINVALID_OR_USED": "Activation code is invalid or already used",
+        "PASSPORT_CREATED": "Passport is already exists",
+        "PASSPORT_INVALID": "Passport is invalid",
+        "PASSWORD_LENGTH": "Password is not formatted correctly",
+        "PASSWORD_NOT_CONTAINT_USERNAME": "Passwords can not contain accounts",
+        "PASSWORD_NOT_IN_USERNAME": "Passwords are not in the account",
+        "PASSWORD_NOT_STRONG": "Passwords are not secure enough",
+        "PASSWORD_REQUIRED": "Please enter your password",
+        "PAYMENT_FAIL": "Payment not success. Please try again laters",
+        "PAYMENT_RECEIACCOUNT_NOT_EXITED": "Receiver account not exited",
+        "PAYMENT_RECEIACCOUNT_NOT_SUPPORT": "Can't topup to this account",
+        "PRIZEVALUE_BETWEEN_MIN_MAX": "The minimum is 10.000đ and does not exceed 20.000.000đ",
+        "PRIZEVALUE_INVALID": "Prize value invalid",
+        "PRIZEVALUE_ZERO": "Minimum payment value {0} đ",
+        "REGISTER_FAILED": "Register account is not success",
+        "RENICKNAME_INVALID": "re-nickname is invalid. Please enter agian",
+        "REPASSWORD_INVALID": "Re-password is invalid. Please enter agian",
+        "SECURITY_NOT_REGISTER": "Account not register secure",
+        "SECURITY_OTP_REQUIRED": "Security OTP require",
+        "SECURITYTYPE_INVALID": "Secure type is invalid",
+        "STATUS_INVALID": "Status is invalid",
+        "SYSTEM_ERROR": "System fail. Please try again later",
+        "SYSTEM_EXCEPTION": "System fail. Please come back later",
+        "SYSTEM_TIMEOUT": "System timeout. Please try again later",
+        "TERMSOFUSE_AGGREE_INVALID": "Term agree invalid",
+        "TOKEN_EXPRIZE": "Token expire",
+        "TOKEN_INVALID": "Token is invalid",
+        "TRANSACTION_FAILED": "Transaction fail. Please try again later",
+        "TRANSACTION_PROCESSING": "Transaction is processing. ",
+        "TRANSFER_REASON_REQUIRED": "Please enter reason for transfer. At least 5 character",
+        "UNLOCK_DENIED": "Not permission unlock",
+        "USERNAME_INVALID": "Account is invalid",
+        "USERNAME_INVALID_KEY": "User invalid key",
+        "USERNAME_LENGTH": "Account number is invalid",
+        "USERNAME_REQUIRED": "Please enter your account number",
+        "USERNAMEORPASSWORD_INVALID": "Account name or password is invalid. Please try again later"
+    }
 }
