--- a/Pay365/Pay365Wallet/App_GlobalResources/Home.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Home.en.resx
@@ -130,7 +130,7 @@
     <value>Business cooperation</value>
   </data>
   <data name="String11" xml:space="preserve">
-    <value>Ms.Le Thanh Huong</value>
+    <value>Ms.Le Huong</value>
   </data>
   <data name="String12" xml:space="preserve">
     <value>Contact information</value>
