--- a/Pay365/Pay365Wallet/App_GlobalResources/Home.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Home.resx
@@ -130,7 +130,7 @@
     <value>Hợp tác kinh doanh</value>
   </data>
   <data name="String11" xml:space="preserve">
-    <value>Ms.Lê Thanh Hương</value>
+    <value>Ms.Lê Hương</value>
   </data>
   <data name="String12" xml:space="preserve">
     <value>Thông tin liên hệ</value>
